# modoru

./: CMakeLists.txt  LICENSE  README.md  kernel.c  kernel_exports.yml  main.c  modoru.h  patch.c  patch_exports.yml  spkg.c  spkg.h  user.c  user_exports.yml
pkg/: template.xml
